--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+.main{
+	width:200px;
+	background-color:purple;
+	border-left:50px solid green;
+	border-left-width:5px;
+	padding:10px;
+	color:white;
+}
