--- a/styles.css
+++ b/styles.css
@@ -6,5 +6,10 @@
 	border-left:50px solid green;
 	border-left-width:5px;
 	padding:10px;
+	
+}
+#heading{
+	font-size:20px;
 	color:white;
+	text-decoration:underline;
 }
